kubernetes/k3s-prod-a/workloads/kavita/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kavita
  namespace: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: docker.io/jvmilazz0/kavita:0.8.4@sha256:07393ed7d6860e7312c0197b8c1ebcd4d53c52b7cabd542db08613410ff22c69
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: kavita-books
              mountPath: /books
            - name: kavita-data
              mountPath: /kavita/config
      volumes:
        - name: kavita-books
          persistentVolumeClaim:
            claimName: kavita-books
        - name: kavita-data
          persistentVolumeClaim:
            claimName: kavita-data
