kubernetes/k3s-prod-a/workloads/kavita/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kavita
  namespace: kavita
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kavita.l.47fc5c.com`)
      kind: Rule
      services:
        - name: kavita
          kind: Service
          port: 5000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: kavita-certificate
